nested function spacing fix

--- a/src/languages/pyret/style-selection/style/scratch.less
+++ b/src/languages/pyret/style-selection/style/scratch.less
@@ -540,11 +540,13 @@
 
 	.blocks-funapp{
     border-radius: 5px;
-		background-color: @func-background;
+    background-color: @func-background;
+    margin-bottom: 2px;
   }
   
   .blocks-funApp{
     padding-left: 0;
+    padding-bottom: 5px;
   }
 
 	.blocks-funDef{
